// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table align column should not override cell style 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <div class="ant-table ant-table-default ant-table-scroll-position-left">
        <!---->
        <div class="ant-table-content">
          <!---->
          <div class="ant-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
              </colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Name</span><span class="ant-table-column-sorter"><!----></span>
          </div></span>
          <!---->
          </th>
          <th style="text-align: center;" class="ant-table-align-center ant-table-row-cell-last"><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Age</span><span class="ant-table-column-sorter"><!----></span>
        </div></span>
        <!---->
        </th>
        </tr>
        </thead>
        <tbody class="ant-table-tbody">
          <tr data-row-key="1" class="ant-table-row ant-table-row-level-0">
            <td class="">
              <!---->
              <!---->
              <!---->
            </td>
            <td style="text-align: center; color: red;" class="">
              <!---->
              <!---->32
            </td>
          </tr>
          <tr data-row-key="2" class="ant-table-row ant-table-row-level-0">
            <td class="">
              <!---->
              <!---->
              <!---->
            </td>
            <td style="text-align: center; color: red;" class="">
              <!---->
              <!---->42
            </td>
          </tr>
        </tbody>
        </table>
      </div>
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
  <ul unselectable="unselectable" class="ant-pagination ant-table-pagination">
    <!---->
    <li title="Previous Page" class="ant-pagination-disabled ant-pagination-prev" aria-disabled="true"><a class="ant-pagination-item-link"><span role="img" aria-label="left" class="anticon anticon-left"><svg class="" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896" focusable="false"><path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path></svg></span></a></li>
    <li title="1" tabindex="0" class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"><a>1</a></li>
    <li title="Next Page" class="ant-pagination-disabled ant-pagination-next" aria-disabled="true"><a class="ant-pagination-item-link"><span role="img" aria-label="right" class="anticon anticon-right"><svg class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896" focusable="false"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"></path></svg></span></a></li>
    <!---->
  </ul>
</div>
</div>
</div>
`;

exports[`Table renders JSX correctly 1`] = `
<div class="ant-table-wrapper">
  <div class="ant-spin-nested-loading">
    <!---->
    <div class="ant-spin-container">
      <div class="ant-table ant-table-default ant-table-scroll-position-left">
        <!---->
        <div class="ant-table-content">
          <!---->
          <div class="ant-table-body">
            <table class="">
              <colgroup>
                <col>
                <col>
                <col>
              </colgroup>
              <thead class="ant-table-thead">
                <tr>
                  <th colspan="2" class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Name</span><span class="ant-table-column-sorter"><!----></span>
          </div></span>
          <!---->
          </th>
          <th rowspan="2" class="ant-table-row-cell-last"><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Age</span><span class="ant-table-column-sorter"><!----></span>
        </div></span>
        <!---->
        </th>
        </tr>
        <tr>
          <th class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">First Name</span><span class="ant-table-column-sorter"><!----></span>
      </div></span>
      <!---->
      </th>
      <th class=""><span class="ant-table-header-column"><div class=""><span class="ant-table-column-title">Last Name</span><span class="ant-table-column-sorter"><!----></span>
    </div></span>
    <!---->
    </th>
    </tr>
    </thead>
    <tbody class="ant-table-tbody">
      <tr data-row-key="1" class="ant-table-row ant-table-row-level-0">
        <td class="">
          <!---->
          <!---->John
        </td>
        <td class="">
          <!---->
          <!---->Brown
        </td>
        <td class="">
          <!---->
          <!---->32
        </td>
      </tr>
      <tr data-row-key="2" class="ant-table-row ant-table-row-level-0">
        <td class="">
          <!---->
          <!---->Jim
        </td>
        <td class="">
          <!---->
          <!---->Green
        </td>
        <td class="">
          <!---->
          <!---->42
        </td>
      </tr>
    </tbody>
    </table>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
</div>
</div>
</div>
</div>
`;
